# kimchi

./: .editorconfig  .gitignore  .kimchi.lua  Features.md  Makefile  README.md  go.mod  go.sum  kitsune.code-workspace
.doc/: ideas.md  logo.ai
.github/workflows/: grammars.yaml
daemon/: .editorconfig  Cargo.toml  Makefile
daemon/.cargo/: config.toml
daemon/src/: handler.rs  main.rs  socket.rs
daemon/src/jobs/: mod.rs
daemon/src/jobs/ast/: mod.rs
daemon/src/jobs/highlight/: mod.rs
daemon/src/jobs/language/: mod.rs
daemon/src/jobs/lsp/: mod.rs
daemon/tests/: rust.sh
dev/: install_go.sh
editor/: .editorconfig  .gitignore  Makefile  README.md  go.mod  go.sum  kitsune.lua
editor/scripts/: install_go.sh  keys.py
editor/src/: actions.go  args.go  binds.go  buffer.go  config.go  config.lua.api.go  config.lua.parser.go  config.meta.go  config.parser.go  context.go  cursor.go  daemon.go  defaults.go  edit.go  input.go  logger.go  main.go  panic_test.go  prompt.go  render.area.go  render.go  render.panes.go  render.screen.go  state.go  statusbar.go  theme.go  util.enum.go  util.errors.go  util.go  util.io.go  util.timing.go  util.vec2.go  version.go
grammars/: Dockerfile  available.json
grammars/agda/: agda.wasm
grammars/bash/: bash.wasm
grammars/css/: css.wasm
grammars/go/: go.wasm
grammars/lua/: lua.wasm
grammars/python/: python.wasm
grammars/scripts/: grammars.sh
grammars/toml/: toml.wasm
grammars/zig/: zig.wasm
kimchi/: args.go  buffer.go  cfg.go  cfg_def.go  cursors.go  fs.go  input.go  logger.go  main.go  render.go  terminal.go
(+4 files in other folders)
